--- a/index.html
+++ b/index.html
@@ -178,9 +178,6 @@
                     </div>
                 </div>
             </section>
-            <section class="services-offered">
-                
-            </section>
             <section class="about-us mt-20">
                 <div class="max-w-7xl mx-auto p-6">
                     <div class="text-center mb-8">
@@ -278,127 +275,77 @@
                     </div>
                 </div>
             </section>
-            <section class="bg-white dark:bg-gray-900">
-                <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
-                  <div class="max-w-screen-md mb-8 lg:mb-16 text-center">
-                    <h2 class="mb-4 text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white">
-                      Designed for business teams like yours
-                    </h2>
-                    <p class="text-gray-500 sm:text-xl dark:text-gray-400">
-                      Here at Flowbite, we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.
+            <section>
+                <div class="py-8 px-4 max-w-screen sm:py-16 lg:px-6 flex items-center justify-center flex-col">
+                  <div class="max-w-screen-md mb-8 lg:mb-16 text-center flex items-center justify-center flex-col px-5">
+                    <h1 class="mb-4 text-4xl font-extrabold tracking-tight text-gray-100 font-[font1]">
+                      Services We Offer
+                    </h1>
+                    <p class="text-gray-500 sm:text-xl font-[font3] font-semibold">
+                      Offering top-quality products, expert guidance, and reliable after-sales support, we ensure a seamless and satisfying dealership experience.
                     </p>
                   </div>
                   <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-3">
                     <!-- Card 1 -->
-                    <div class="text-center">
-                      <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                        <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3zm11.707 4.707a1 1 0 00-1.414-1.414L10 9.586 8.707 8.293a1 1 0 00-1.414 0l-2 2a1 1 0 101.414 1.414L8 10.414l1.293 1.293a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
-                        </svg>
+                    <div class="text-center bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom pb-4">
+                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
+                        <i class="ri-car-line text-primary-600 text-2xl"></i>
                       </div>
-                      <h3 class="mb-2 text-xl font-bold dark:text-white">Marketing</h3>
-                      <p class="text-gray-500 dark:text-gray-400">
-                        Plan it, create it, launch it. Collaborate seamlessly with the organization and hit your marketing goals every month.
+                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Car Dealership</h3>
+                      <p class="text-gray-500 font-[font3] font-semibold">
+                        Find the perfect vehicle for your needs with our wide selection of new and used cars.
                       </p>
                     </div>
                     <!-- Card 2 -->
-                    <div class="text-center">
-                      <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                        <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z"></path>
-                        </svg>
+                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                        <i class="ri-shield-check-line text-primary-600 text-2xl"></i>
                       </div>
-                      <h3 class="mb-2 text-xl font-bold dark:text-white">Legal</h3>
-                      <p class="text-gray-500 dark:text-gray-400">
+                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Legal</h3>
+                      <p class="text-gray-500 font-[font3] font-semibold">
                         Protect your organization, devices, and stay compliant with our structured workflows and custom permissions.
                       </p>
                     </div>
                     <!-- Card 3 -->
-                    <div class="text-center">
-                      <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                        <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                          <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                        </svg>
+                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                        <i class="ri-settings-line text-primary-600 text-2xl"></i>
                       </div>
-                      <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                      <p class="text-gray-500 dark:text-gray-400">
+                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Business Automation</h3>
+                      <p class="text-gray-500 font-[font3] font-semibold">
                         Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
                       </p>
                     </div>
-                    <div class="text-center">
-                        <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                          <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                            <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                          </svg>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                        <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                        </p>
+                    <!-- Card 4 -->
+                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                        <i class="ri-car-washing-line text-primary-600 text-2xl"></i>
                       </div>
-                      <div class="text-center">
-                        <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                          <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                            <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                          </svg>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                        <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                        </p>
+                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Car Maintenance</h3>
+                      <p class="text-gray-500 font-[font3] font-semibold">
+                        Keep your car in perfect condition with our comprehensive maintenance services.
+                      </p>
+                    </div>
+                    <!-- Card 5 -->
+                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                        <i class="ri-price-tag-3-line text-primary-600 text-2xl"></i>
                       </div>
-                      <div class="text-center">
-                        <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                          <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                            <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                          </svg>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                        <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                        </p>
+                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Special Offers</h3>
+                      <p class="text-gray-500 font-[font3] font-semibold">
+                        Avail exciting discounts and exclusive deals on our car services.
+                      </p>
+                    </div>
+                    <!-- Card 6 -->
+                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                        <i class="ri-user-star-line text-primary-600 text-2xl"></i>
                       </div>
-                      <div class="text-center">
-                        <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                          <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                            <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                          </svg>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                        <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                        </p>
-                      </div>
-                      <div class="text-center">
-                        <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                          <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                            <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                          </svg>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                        <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                        </p>
-                      </div>
-                      <div class="text-center">
-                        <div class="flex justify-center items-center mb-4 w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                          <svg class="w-6 h-6 text-primary-600 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                            <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path>
-                          </svg>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Business Automation</h3>
-                        <p class="text-gray-500 dark:text-gray-400">
-                          Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                        </p>
-                      </div>
-                                
+                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Customer Support</h3>
+                      <p class="text-gray-500 font-[font3] font-semibold">
+                        Experience top-notch support for all your dealership and service-related queries.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </section>
