--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                             </div>
                         </div>
                         <div id="page2" class="swiper-slide">
-                            <video autoplay muted loop src="./Assets/videos/mixkit-car-dealer-showing-the-car-to-a-client-23048-hd-ready.mp4"
+                            <video autoplay muted loop
+                                src="./Assets/videos/mixkit-car-dealer-showing-the-car-to-a-client-23048-hd-ready.mp4"
                                 class="brightness-50 h-full w-full object-cover"></video>
                             <div
                                 class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
@@ -174,9 +175,44 @@
                                         your
                                         dreams</button>
                                 </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
+                            <div id="page3" class="swiper-slide">
+                                <video autoplay muted loop src="./Assets/videos/TK.mp4"
+                                    class="brightness-50 h-full w-full object-cover"></video>
+                                <div
+                                    class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
+                                    <h4 data-translate="homeSubtitle"
+                                        class="text-center text-2xl font-[font4] text-zinc-300 max-md:text-lg max-sm:text-sm">
+                                        Acting
+                                        with integrity, a driver of trust</h4>
+                                    <h1 class="text-center text-8xl font-[font4] leading-none font-semibold max-md:text-6xl max-sm:text-5xl"
+                                        data-translate="homeTitle">
+                                        Your Dream Car<br>
+                                        Awaits You</h1>
+                                    <p data-translate="homeText"
+                                        class="text-center w-1/2 font-[font3] text-zinc-300 my-6 max-md:text-lg max-md:w-3/5 max-sm:text-sm">
+                                        At INT'l Motor, we provide tailored vehicle acquisition solutions for personal
+                                        or
+                                        professional
+                                        needs. From cars to machinery, our expert team ensures top-quality service with
+                                        integrity and
+                                        excellence.</p>
+                                    <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
+                                            data-translate="buttonText"
+                                            class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover
+                                            our
+                                            brokerage
+                                            solutions</button>
+                                        <button data-translate="buttonText2"
+                                            class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find
+                                            vehical of
+                                            your
+                                            dreams</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
             </section>
             <section class="about-us mt-20">
                 <div class="max-w-7xl mx-auto p-6">
@@ -277,79 +313,95 @@
             </section>
             <section>
                 <div class="py-8 px-4 max-w-screen sm:py-16 lg:px-6 flex items-center justify-center flex-col">
-                  <div class="max-w-screen-md mb-8 lg:mb-16 text-center flex items-center justify-center flex-col px-5">
-                    <h1 class="mb-4 text-4xl font-extrabold tracking-tight text-gray-100 font-[font1]">
-                      Services We Offer
-                    </h1>
-                    <p class="text-gray-500 sm:text-xl font-[font3] font-semibold">
-                      Offering top-quality products, expert guidance, and reliable after-sales support, we ensure a seamless and satisfying dealership experience.
-                    </p>
-                  </div>
-                  <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-3">
-                    <!-- Card 1 -->
-                    <div class="text-center bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom pb-4">
-                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
-                        <i class="ri-car-line text-primary-600 text-2xl"></i>
-                      </div>
-                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Car Dealership</h3>
-                      <p class="text-gray-500 font-[font3] font-semibold">
-                        Find the perfect vehicle for your needs with our wide selection of new and used cars.
-                      </p>
+                    <div
+                        class="max-w-screen-md mb-8 lg:mb-16 text-center flex items-center justify-center flex-col px-5">
+                        <h1 class="mb-4 text-4xl font-extrabold tracking-tight text-gray-100 font-[font1]">
+                            Services We Offer
+                        </h1>
+                        <p class="text-gray-500 sm:text-xl font-[font3] font-semibold">
+                            Offering top-quality products, expert guidance, and reliable after-sales support, we ensure
+                            a seamless and satisfying dealership experience.
+                        </p>
                     </div>
-                    <!-- Card 2 -->
-                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
-                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
-                        <i class="ri-shield-check-line text-primary-600 text-2xl"></i>
-                      </div>
-                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Legal</h3>
-                      <p class="text-gray-500 font-[font3] font-semibold">
-                        Protect your organization, devices, and stay compliant with our structured workflows and custom permissions.
-                      </p>
+                    <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-3">
+                        <!-- Card 1 -->
+                        <div
+                            class="text-center bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom pb-4">
+                            <div
+                                class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 dark:bg-primary-900">
+                                <i class="ri-car-line text-primary-600 text-2xl"></i>
+                            </div>
+                            <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Car Dealership</h3>
+                            <p class="text-gray-500 font-[font3] font-semibold">
+                                Find the perfect vehicle for your needs with our wide selection of new and used cars.
+                            </p>
+                        </div>
+                        <!-- Card 2 -->
+                        <div
+                            class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                            <div
+                                class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                                <i class="ri-shield-check-line text-primary-600 text-2xl"></i>
+                            </div>
+                            <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Legal</h3>
+                            <p class="text-gray-500 font-[font3] font-semibold">
+                                Protect your organization, devices, and stay compliant with our structured workflows and
+                                custom permissions.
+                            </p>
+                        </div>
+                        <!-- Card 3 -->
+                        <div
+                            class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                            <div
+                                class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                                <i class="ri-settings-line text-primary-600 text-2xl"></i>
+                            </div>
+                            <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Business Automation</h3>
+                            <p class="text-gray-500 font-[font3] font-semibold">
+                                Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to
+                                help you get started.
+                            </p>
+                        </div>
+                        <!-- Card 4 -->
+                        <div
+                            class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                            <div
+                                class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                                <i class="ri-car-washing-line text-primary-600 text-2xl"></i>
+                            </div>
+                            <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Car Maintenance</h3>
+                            <p class="text-gray-500 font-[font3] font-semibold">
+                                Keep your car in perfect condition with our comprehensive maintenance services.
+                            </p>
+                        </div>
+                        <!-- Card 5 -->
+                        <div
+                            class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                            <div
+                                class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                                <i class="ri-price-tag-3-line text-primary-600 text-2xl"></i>
+                            </div>
+                            <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Special Offers</h3>
+                            <p class="text-gray-500 font-[font3] font-semibold">
+                                Avail exciting discounts and exclusive deals on our car services.
+                            </p>
+                        </div>
+                        <!-- Card 6 -->
+                        <div
+                            class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
+                            <div
+                                class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
+                                <i class="ri-user-star-line text-primary-600 text-2xl"></i>
+                            </div>
+                            <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Customer Support</h3>
+                            <p class="text-gray-500 font-[font3] font-semibold">
+                                Experience top-notch support for all your dealership and service-related queries.
+                            </p>
+                        </div>
                     </div>
-                    <!-- Card 3 -->
-                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
-                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
-                        <i class="ri-settings-line text-primary-600 text-2xl"></i>
-                      </div>
-                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Business Automation</h3>
-                      <p class="text-gray-500 font-[font3] font-semibold">
-                        Auto-assign tasks, send Slack messages, and much more with hundreds of new templates to help you get started.
-                      </p>
-                    </div>
-                    <!-- Card 4 -->
-                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
-                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
-                        <i class="ri-car-washing-line text-primary-600 text-2xl"></i>
-                      </div>
-                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Car Maintenance</h3>
-                      <p class="text-gray-500 font-[font3] font-semibold">
-                        Keep your car in perfect condition with our comprehensive maintenance services.
-                      </p>
-                    </div>
-                    <!-- Card 5 -->
-                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
-                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
-                        <i class="ri-price-tag-3-line text-primary-600 text-2xl"></i>
-                      </div>
-                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Special Offers</h3>
-                      <p class="text-gray-500 font-[font3] font-semibold">
-                        Avail exciting discounts and exclusive deals on our car services.
-                      </p>
-                    </div>
-                    <!-- Card 6 -->
-                    <div class="text-center pb-4 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
-                      <div class="flex justify-center items-center w-12 h-12 rounded-full bg-primary-100 bg-primary-900">
-                        <i class="ri-user-star-line text-primary-600 text-2xl"></i>
-                      </div>
-                      <h3 class="mb-2 font-[font1] text-xl font-bold text-white">Customer Support</h3>
-                      <p class="text-gray-500 font-[font3] font-semibold">
-                        Experience top-notch support for all your dealership and service-related queries.
-                      </p>
-                    </div>
-                  </div>
                 </div>
-              </section>
-              
+            </section>
+
             <section class="testimonials">
                 <section class="py-10">
                     <div class="container flex flex-col items-center mx-auto md:p-10 md:px-12">
