--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <div id="page2" class="swiper-slide">
-                            <video autoplay muted loop src="./Assets/videos/mixkit-car-dealer-showing-the-car-to-a-client-23048-hd-ready.mp4"
+                            <video autoplay muted loop src="./Assets/videos/TK.mp4"
                                 class="brightness-50 h-full w-full object-cover"></video>
                             <div
                                 class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
